--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, @article.title_ko %>
+
 <div class="max-w-4xl mx-auto" id="<%= dom_id @article %>">
   <%= link_to articles_path, class: "inline-flex items-center text-primary-600 hover:text-primary-700 mb-6" do %>
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
@@ -28,17 +30,19 @@
         </div>
 
         <div class="py-6">
-            <h2 class="text-xl font-semibold mb-4">본문</h2>
             <div class="prose max-w-none text-gray-700">
-                <% if @article.summary_detail&.dig("main_content").is_a?(String) %>
-                    <%= Kramdown::Document.new(@article.summary_detail.dig("main_content")).to_html.html_safe %>
+                <% if @article.summary_detail %>
+                    <p>
+                        <%= @article.summary_detail["introduction"] %>
+                    </p>
+                    <p>
+                        <%= @article.summary_detail["body"] %>
+                    </p>
+                    <p>
+                        <%= @article.summary_detail["conclusion"] %>
+                    </p>
                 <% end %>
             </div>
-            <h3 class="text-lg font-semibold mt-6 mb-4">결론</h3>
-            <div class="prose max-w-none text-gray-700">
-                <% if @article.summary_detail&.dig("conclusion").is_a?(String) %>
-                    <%= @article.summary_detail['conclusion'] %>
-                <% end %>
         </div>
     </div>
   </div>
