--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -35,7 +35,7 @@
           <% end %>
         </div>
         <div class="mt-auto pt-4 flex justify-between text-sm text-gray-500 border-t border-gray-100">
-            <span>작성자: <%= article.user %></span>
+            <span>작성자: <%= article.user.id %></span>
             <span><%= article.created_at.strftime("%Y-%m-%d %H:%M") %></span>
         </div>
       </div>
