--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -31,7 +31,7 @@
           <% end %>
         </div>
         <div class="mt-auto pt-4 flex justify-between text-sm text-gray-500 border-t border-gray-100">
-            <span>작성자: <%= article.user&.id %></span>
+            <span>작성자: <%= article.user&.name %></span>
             <span><%= article.published_at&.strftime("%Y-%m-%d") %></span>
         </div>
       </div>
