--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,7 @@
         <h1 class="text-3xl font-bold text-gray-800 mb-3"><%= @article.title_ko %></h1>
 
         <div class="flex flex-wrap items-center text-sm text-gray-500 mb-6">
-            <span class="mr-4">작성자: <%= @article.user&.id %></span>
+            <span class="mr-4">작성자: <%= @article.user&.name %></span>
             <span class="mr-4"><%= @article.published_at&.strftime("%Y-%m-%d") %></span>
             <%= link_to @article.url, @article.url, target: "_blank", class:"text-primary-600 hover:text-primary-700 hover:underline" %>
         </div>
