기사 모델에 slug 필드 추가 및 관련 마이그레이션 생성, Kramdown을 사용하여 본문 렌더링 개선

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -36,9 +36,9 @@
                         <%= @article.summary_detail["introduction"] %>
                     </p>
 
-                    <p class="mb-6">
-                        <%= @article.summary_detail["body"] %>
-                    </p>
+                    <div class="mb-6">
+                        <%= Kramdown::Document.new(@article.summary_detail["body"]).to_html.html_safe %>
+                    </div>
 
                     <h2 className="text-2xl font-semibold text-gray-900 mt-8 mb-4">결론</h2>
 
