--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,7 +18,7 @@
     <div id="<%= dom_id article %>" class="bg-white rounded-xl shadow-sm hover:shadow-md transition-shadow overflow-hidden flex flex-col border border-gray-100">
       <div class="p-6 flex flex-col flex-grow">
         <div class="mb-2">
-          <h2 class="text-2xl font-semibold text-gray-800 mt-1 mb-1"><%= link_to article.title_ko || article.title, article %></h2>
+          <h2 class="text-2xl font-semibold text-gray-800 mt-1 mb-1"><%= link_to article.title_ko || article.title, article_path(article.slug) %></h2>
           <%= link_to article.url, article.url, target: "_blank", class: "block md:inline ml-0 md:ml-2 text-sm text-primary-600 hover:text-primary-700 hover:underline" %>
         </div>
         <div class="text-gray-600 mb-4">
