Tailwind CSS 설정에 폰트 변수 추가 및 flowbite-typography 패키지 의존성 추가

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -21,6 +21,9 @@
     --color-bright-magenta: #ED6FE9;
     --color-bright-cyan: #32E0FB;
     --color-bright-white: #D3D8D9;
+
+    --font-sans: 'Inter', 'ui-sans-serif', 'system-ui', '-apple-system', 'system-ui', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans KR', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-body: 'Inter', 'ui-sans-serif', 'system-ui', '-apple-system', 'system-ui', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans KR', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 body {
