--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,36 +1,52 @@
 <% content_for :title, @article.title_ko %>
 
 <div class="max-w-4xl mx-auto" id="<%= dom_id @article %>">
-  <%= link_to articles_path, class: "inline-flex items-center text-primary-600 hover:text-primary-700 mb-6" do %>
+  <%= link_to articles_path, class: "inline-flex items-center text-blue-400 hover:text-blue-300 mb-6" do %>
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
       </svg>
       목록으로 돌아가기
   <% end %>
 
-  <div id="articleDetail" class="bg-white rounded-xl shadow-md overflow-hidden border border-gray-100">
+  <div id="articleDetail" class="bg-gray-800 rounded-xl shadow-md overflow-hidden border border-gray-700">
     <div class="p-8">
-        <h1 class="text-3xl font-bold text-gray-800 mb-3"><%= @article.title_ko %></h1>
+        <h1 class="text-2xl font-bold text-gray-100 mb-3"><%= @article.title_ko %></h1>
 
-        <div class="flex flex-wrap items-center text-sm text-gray-500 mb-6">
-            <span class="mr-4">작성자: <%= @article.user&.name %></span>
-            <span class="mr-4"><%= @article.published_at&.strftime("%Y-%m-%d") %></span>
-            <%= link_to @article.url, @article.url, target: "_blank", class:"text-primary-600 hover:text-primary-700 hover:underline" %>
+        <div class="flex flex-wrap items-center text-xs text-gray-400 mb-6">
+            <span class="mr-4 inline-flex items-center">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 mr-1 text-gray-500">
+                <path d="M10 8a3 3 0 100-6 3 3 0 000 6zM3.465 14.493a1.23 1.23 0 00.41 1.412A9.957 9.957 0 0010 18c2.31 0 4.438-.784 6.131-2.1.43-.333.604-.903.408-1.41a7.002 7.002 0 00-13.074.003z" />
+              </svg>
+              <%= @article.user&.name || 'Unknown' %>
+            </span>
+            <span class="mr-4 inline-flex items-center">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 mr-1 text-gray-500">
+                <path fill-rule="evenodd" d="M5.75 2a.75.75 0 01.75.75V4h7V2.75a.75.75 0 011.5 0V4h.25A2.75 2.75 0 0118 6.75v8.5A2.75 2.75 0 0115.25 18H4.75A2.75 2.75 0 012 15.25v-8.5A2.75 2.75 0 014.75 4H5V2.75A.75.75 0 015.75 2zm-1 5.5c0-.414.336-.75.75-.75h10.5a.75.75 0 010 1.5H5.5a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
+              </svg>
+              <%= @article.published_at&.strftime("%Y년 %m월 %d일") || 'N/A' %>
+            </span>
+            <%= link_to @article.url, target: "_blank", class: "inline-flex items-center text-sm text-blue-400 hover:text-blue-300 hover:underline font-medium" do %>
+              <%= @article.url %>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 ml-1">
+                <path fill-rule="evenodd" d="M4.25 5.5a.75.75 0 000 1.5h5.5a.75.75 0 000-1.5h-5.5zm0 3a.75.75 0 000 1.5h3.5a.75.75 0 000-1.5h-3.5zm0 3a.75.75 0 000 1.5h5.5a.75.75 0 000-1.5h-5.5zm8-5a.75.75 0 01.75-.75h.5a.75.75 0 01.75.75v.5c0 .414.336.75.75.75h.5a.75.75 0 01.75.75v.5a.75.75 0 01-.75.75h-.5a.75.75 0 01-.75-.75v-.5a.75.75 0 00-.75-.75h-.5a.75.75 0 01-.75-.75v-.5zM5 3.25a.75.75 0 01.75-.75h8.5a.75.75 0 01.75.75v8.5a.75.75 0 01-.75.75h-8.5a.75.75 0 01-.75-.75v-8.5z" clip-rule="evenodd" />
+                <path d="M3 4.75A2.75 2.75 0 015.75 2h8.5A2.75 2.75 0 0117 4.75v8.5A2.75 2.75 0 0114.25 16h-8.5A2.75 2.75 0 013 13.25v-8.5zm2.75-.904a1.25 1.25 0 00-1.25 1.25v8.5c0 .69.56 1.25 1.25 1.25h8.5c.69 0 1.25-.56 1.25-1.25v-8.5c0-.69-.56-1.25-1.25-1.25h-8.5z" />
+              </svg>
+            <% end %>
         </div>
 
-        <div class="border-t border-b border-gray-100 py-6">
-            <h2 class="text-xl font-semibold mb-4">3줄 요약</h2>
+        <div class="border-t border-b border-gray-700 py-6">
+            <h2 class="text-xl font-semibold text-gray-100 mb-4">3줄 요약</h2>
             <% if @article.summary_key.is_a?(Array) %>
                 <ul class="list-disc pl-5 space-y-2 my-4">
-                    <% @article.summary_key&.each do %>
-                        <li class="text-gray-700"><%= it %></li>
+                    <% @article.summary_key&.each do |item| %>
+                        <li class="text-gray-300 text-sm"><%= item %></li>
                     <% end %>
                 </ul>
             <% end %>
         </div>
 
         <div class="py-8 mx-auto">
-            <div class="prose prose-lg max-w-none text-gray-700 leading-relaxed">
+            <div class="prose prose-lg max-w-none text-gray-300 leading-relaxed article-content">
                 <% if @article.summary_detail.is_a?(Hash) %>
                     <p class="mb-6">
                         <%= @article.summary_detail["introduction"] %>
@@ -40,7 +56,7 @@
                         <%= Kramdown::Document.new(@article.summary_detail["body"]).to_html.html_safe %>
                     </div>
 
-                    <h2 className="text-2xl font-semibold text-gray-900 mt-8 mb-4">결론</h2>
+                    <h2 class="text-xl font-semibold text-gray-100 mt-8 mb-4">결론</h2>
 
                     <p class="mb-6">
                         <%= @article.summary_detail["conclusion"] %>
