--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, @article.title_ko %>
 
-<div class="max-w-4xl mx-auto" id="<%= dom_id @article %>">
+<div class="space-y-6" id="<%= dom_id @article %>">
   <%= link_to articles_path, class: "inline-flex items-center text-blue-400 hover:text-blue-300 mb-6" do %>
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
@@ -37,9 +37,9 @@
         <div class="border-t border-b border-gray-700 py-6">
             <h2 class="text-xl font-semibold text-gray-100 mb-4">3줄 요약</h2>
             <% if @article.summary_key.is_a?(Array) %>
-                <ul class="list-disc pl-5 space-y-2 my-4">
+                <ul class="list-disc pl-5 space-y-1 my-4">
                     <% @article.summary_key&.each do |item| %>
-                        <li class="text-gray-300 text-sm"><%= item %></li>
+                        <li class="text-gray-300 text-sm leading-relaxed"><%= item %></li>
                     <% end %>
                 </ul>
             <% end %>
@@ -48,19 +48,23 @@
         <div class="py-8 mx-auto">
             <div class="prose prose-lg max-w-none text-gray-300 leading-relaxed article-content">
                 <% if @article.summary_detail.is_a?(Hash) %>
-                    <p class="mb-6">
-                        <%= @article.summary_detail["introduction"] %>
-                    </p>
-
-                    <div class="mb-6">
-                        <%= Kramdown::Document.new(@article.summary_detail["body"]).to_html.html_safe %>
+                    <div class="mb-8 p-6 bg-gray-700 rounded-lg">
+                        <p class="text-gray-300 leading-relaxed">
+                            <%= @article.summary_detail["introduction"] %>
+                        </p>
                     </div>
 
-                    <h2 class="text-xl font-semibold text-gray-100 mt-8 mb-4">결론</h2>
+                    <div class="mb-8">
+                        <div class="p-6 bg-gray-700 rounded-lg">
+                            <%= Kramdown::Document.new(@article.summary_detail["body"]).to_html.html_safe %>
+                        </div>
+                    </div>
 
-                    <p class="mb-6">
-                        <%= @article.summary_detail["conclusion"] %>
-                    </p>
+                    <div class="p-6 bg-gray-700 rounded-lg">
+                        <p class="text-gray-300 leading-relaxed">
+                            <%= @article.summary_detail["conclusion"] %>
+                        </p>
+                    </div>
                 <% end %>
             </div>
         </div>
