--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,10 +2,10 @@
 
 <div class="space-y-6 max-w-6xl mx-auto" id="<%= dom_id @article %>">
   <div id="articleDetail" class="bg-gray-800 rounded-xl shadow-md overflow-hidden border border-gray-700">
-    <div class="p-8">
+    <div class="p-4 md:p-8">
         <h1 class="text-2xl font-bold text-gray-100 mb-3"><%= @article.title_ko %></h1>
 
-        <div class="flex flex-wrap items-center text-xs text-gray-400 mb-6">
+        <div class="flex flex-wrap items-center text-xs text-gray-400 mb-3 md:mb-6">
             <span class="mr-4 inline-flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 mr-1 text-gray-500">
                 <path d="M10 8a3 3 0 100-6 3 3 0 000 6zM3.465 14.493a1.23 1.23 0 00.41 1.412A9.957 9.957 0 0010 18c2.31 0 4.438-.784 6.131-2.1.43-.333.604-.903.408-1.41a7.002 7.002 0 00-13.074.003z" />
@@ -38,22 +38,20 @@
             <% end %>
         </div>
 
-        <div class="py-8 mx-auto">
+        <div class="py-4 md:py-8 mx-auto">
             <div class="prose prose-lg max-w-none text-gray-300 leading-relaxed article-content">
                 <% if @article.summary_detail.is_a?(Hash) %>
-                    <div class="mb-8 p-6 bg-gray-700 rounded-lg">
+                    <div class="mb-4 md:mb-8 p-3 md:p-6 bg-gray-700 rounded-lg">
                         <p class="text-gray-300 leading-relaxed">
                             <%= @article.summary_detail["introduction"] %>
                         </p>
                     </div>
 
-                    <div class="mb-8">
-                        <div class="p-6 bg-gray-700 rounded-lg">
-                            <%= Kramdown::Document.new(@article.summary_detail["body"]).to_html.html_safe %>
-                        </div>
+                    <div class="mb-4 md:mb-8 p-3 md:p-6 bg-gray-700 rounded-lg">
+                        <%= Kramdown::Document.new(@article.summary_detail["body"]).to_html.html_safe %>
                     </div>
 
-                    <div class="p-6 bg-gray-700 rounded-lg">
+                    <div class="mb-4 md:mb-8 p-3 md:p-6 bg-gray-700 rounded-lg">
                         <p class="text-gray-300 leading-relaxed">
                             <%= @article.summary_detail["conclusion"] %>
                         </p>
