로직 개선: 기사 목록 정렬 기준을 게시 시간으로 변경 및 다국어 지원을 위한 한국어 로케일 추가

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <nav class="bg-green-700 border-green-800">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <%= link_to root_path, class: "flex items-center space-x-3 rtl:space-x-reverse" do %>
-          <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">알 || AL 뉴스</span>
+          <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">RA || 루비 AI 뉴스</span>
         <% end %>
         <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-100 rounded-lg md:hidden hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500" aria-controls="navbar-search" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
