--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,8 @@
     <div class="p-4 md:p-8">
         <h1 class="text-2xl font-bold text-gray-100 mb-3"><%= @article.title_ko %></h1>
 
+        <h2 class="text-xl font-semibold text-white-100 mb-3"><%= @article.title %></h2>
+
         <div class="flex flex-wrap items-center text-xs text-gray-400 mb-3 md:mb-6">
             <span class="mr-4 inline-flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 mr-1 text-gray-500">
