--- a/app/views/madmin/application/show.html.erb
+++ b/app/views/madmin/application/show.html.erb
@@ -1,28 +1,28 @@
 <%= content_for :title, resource.display_name(@record) %>
 
-<header class="flex flex-col md:flex-row md:items-center md:justify-between gap-4 mb-6">
+<header class="header flex flex-col md:flex-row md:items-center md:justify-between gap-4 mb-6">
   <h1 class="text-2xl font-bold">
     <%= link_to resource.friendly_name.pluralize, resource.index_path, class: "text-gray-500 hover:text-blue-600" %>
     <span class="mx-2 text-gray-400">/</span>
     <%= resource.display_name(@record) %>
   </h1>
-  <div class="flex gap-2">
+  <div class="actions flex gap-2">
     <% resource.member_actions.each do |action| %>
       <%= instance_exec(@record, &action) %>
     <% end %>
-    <%= link_to "Edit", resource.edit_path(@record), class: "btn bg-gray-200 rounded px-4 py-2 hover:bg-gray-300" %>
-    <%= button_to "Delete", resource.show_path(@record), method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn bg-red-600 text-white rounded px-4 py-2 hover:bg-red-700" %>
+    <%= link_to "Edit", resource.edit_path(@record), class: "btn btn-secondary bg-gray-200 rounded px-4 py-2 hover:bg-gray-300" %>
+    <%= button_to "Delete", resource.show_path(@record), method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-danger bg-red-600 text-white rounded px-4 py-2 hover:bg-red-700" %>
   </div>
 </header>
 
-<div class="overflow-x-auto rounded shadow bg-white">
+<div class="table-scroll overflow-x-auto rounded shadow bg-white">
   <table class="min-w-full divide-y divide-gray-200">
     <tbody class="bg-white divide-y divide-gray-100">
     <% resource.attributes.values.each do |attribute| %>
       <% next if attribute.field.nil? %>
       <% next unless attribute.field.visible?(action_name) %>
       <tr>
-        <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider whitespace-nowrap w-1/4">
+        <th class="label px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider whitespace-nowrap w-1/4">
           <%= attribute.field.options.label || attribute.name.to_s.titleize %>
         </th>
         <td class="px-4 py-2 whitespace-nowrap">
